Set body color white to fix invisible text in bare sections

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -6,8 +6,9 @@ body {
 
 body {
     @include serif-font;
-    background-color: black; 
+    background-color: black;
     background-image: none;
+    color: white;
 }
 
 hr {
